[package]
name = "libmseed"
version = "0.1.0"
authors = ["Brian Savage <savage13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmseed-sys = { git = "https://github.com/savage13/libmseed-sys", branch = "main" }
time = "^0.2"
